# brewval

./: .gitignore  README.md  pyproject.toml
brewval/: cli.py  eval.py  model.py
docs/examples/: evaluation.ipynb
examples/: eval-weather-example-input.csv
examples/weather-umbrella/: labels.csv  prompts.csv
