[tool.poetry]
name = "brewval"
version = "0.0.1"
description = "Evaluating prompts on all LLMs"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/BrewLLM/brewval"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.76"
openai = "^0.26.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
